# vision

./: .clang-format  .clang-tidy  .gitignore  .neocmake.toml  CMakeLists.txt  CMakePresets.json  conanfile.py
.github/workflows/: cmake-single-platform.yml
cmake/: CompilerWarnings.cmake  CreateCompileCommandsSymlink.cmake  Dependencies.cmake  Protobuf.cmake
proto/vision/v1/: measurement.proto
src/: main.cpp
src/app/: CMakeLists.txt
src/app/src/: vision.cpp
src/camera/: CMakeLists.txt  Camera.cpp  Camera.h
src/camera/include/Camera/: Camera.h
src/camera/src/: Camera.cpp
src/data_streamer/: CMakeLists.txt
src/data_streamer/include/DataStreamer/: DataTypes.h  ImageStreamer.h  OxtsStreamer.h
src/data_streamer/src/: ImageStreamer.cpp  OxtsStreamer.cpp  StreamerUtil.cpp  StreamerUtil.h
src/datastreamer/: CMakeLists.txt  DataStreamer.cpp  DataStreamer.h  DataTypes.h  ImageStreamer.cpp  ImageStreamer.h  OxtsStreamer.cpp  OxtsStreamer.h  StreamerUtil.cpp  StreamerUtil.h
src/datastreamer/src/: StreamerUtil.cpp
src/featureMatcher/: CMakeLists.txt  featureMatcher.cpp  featureMatcher.h
src/featureMatcher/src/: featureMatcher.cpp
src/feature_matcher/: CMakeLists.txt
src/feature_matcher/include/FeatureMatcher/: FeatureMatcher.h
src/feature_matcher/src/: FeatureMatcher.cpp
src/models/: CMakeLists.txt  ConstantVelocity.cpp  ConstantVelocity.h
src/models/include/Models/: ConstantVelocity.h
src/models/src/: ConstantVelocity.cpp
src/navigationTypes/: CMakeLists.txt
src/stateEstimator/: CMakeLists.txt  KalmanFilter.cpp  KalmanFilter.h
src/stateEstimator/src/: KalmanFilter.cpp
src/state_estimator/: CMakeLists.txt
src/state_estimator/include/StateEstimator/: KalmanFilter.h
src/state_estimator/src/: KalmanFilter.cpp
src/vision_grpc/: CMakeLists.txt
tools/viewer/: requirements.txt
